--- a/src/img/resources.qrc
+++ b/src/img/resources.qrc
@@ -6,5 +6,7 @@
 	<file>settings.png</file>
 	<file>start_inactive.png</file>
 	<file>stop.png</file>
+	<file>project_file_picker.png</file>
+	<file>add_command.png</file>
 </qresource>
 </RCC>
